# CppTimer

./: CMakeLists.txt  README.en.md  README.md  sample.cpp  timer.hpp
